@@ -148,7 +148,7 @@
 
 (defconst emacs-w3m-version
   (eval-when-compile
-    (let ((rev "$Revision: 1.983 $"))
+    (let ((rev "$Revision: 1.984 $"))
       (and (string-match "\\.\\([0-9]+\\) \\$\\'" rev)
 	   (setq rev (- (string-to-number (match-string 1 rev)) 968))
 	   (concat "1.3.80" (if (> rev 0) (format ".%d" rev) "")))))
@@ -3416,13 +3416,11 @@ In Transient Mark mode, deactivate the mark."
 	(setq w3m-input-url-history
 	      (cons url (delete url w3m-input-url-history))))
       ;; The return value of this function must contain a scheme part.
-      (cond ((eq url 'popup)
-	     url)
-	    ((and (string-match w3m-url-components-regexp url)
-		  (match-beginning 1))
-	     url)
-	    (t
-	     (concat "http://" url))))))
+      (if (or (not (stringp url))
+	      (and (string-match w3m-url-components-regexp url)
+		   (match-beginning 1)))
+	  url
+	(concat "http://" url)))))
 
 
 ;;; Cache:
