@@ -1,3 +1,10 @@
+2004-01-24  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
+
+	* w3m-proc.el (w3m-process-start-and-wait): Abolished.
+	(w3m-process-with-wait-handler): Reimplemented.
+
+	* w3m.el (w3m-input-url): Accept other symbols than `popup'.
+
 2004-01-23  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m.el (w3m-goto-url): Register a url to the history even if it
